fix image paths in build

--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -20,7 +20,7 @@ import Card from "../components/Card.astro";
         language="Javascript"
         languageColor="#f1e05a"
         year="2023"
-        image="/assets/patchwork.png"
+        image="/patchwork.png"
         imageAlt="Screenshot of Patchwork Archive site"
         tags={["React", "Python", "MySQL" , "S3 Storage", "TailwindCSS"]}
       />
@@ -40,7 +40,7 @@ import Card from "../components/Card.astro";
         language="Python"
         languageColor="#3572A5"
         year="2023"
-        image="/assets/phase-tracker.png"
+        image="/phase-tracker.png"
         tags={["Python", "Next.js", "Tailwind", "SSR", "Chart.js", "PostgreSQL", "YouTube API"]}
       />
       <Card
@@ -68,7 +68,7 @@ import Card from "../components/Card.astro";
         language="Typescript"
         languageColor="#3178c6"
         year="2025"
-        image="assets/573.png"
+        image="/573.png"
         imageAlt="573-UPDATES site screenshot"
         tags={["React", "TypeScript", "Python", "Web Scraping"]}
       />
@@ -115,7 +115,7 @@ import Card from "../components/Card.astro";
         language="Python"
         languageColor="#3572A5"
         year="2023"
-        image="assets/link.png"
+        image="/link.png"
         imageAlt="Moekyun Link Shortener Screenshot"
         tags={["Python", "Flask", "PostgreSQL", "Redis"]}
       />
@@ -126,7 +126,7 @@ import Card from "../components/Card.astro";
         language="C#"
         languageColor="#178600"
         year="2023"
-        image="assets/malmstone.png"
+        image="/malmstone.png"
         imageAlt="FFXIV Malmstone Plugin Screenshot"
         tags={["C#", "ImGui"]}
       />
