--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,7 +4,7 @@
       <li><a href="/">Home</a></li>
       <li><a href="/about">About</a></li>
       <li><a href="/projects">Projects</a></li>
-      <li><a href="https://files.pinapelz.com/Yukai%20Shan%20-%20Resume-2.pdf">Resume</a></li>
+      <li><a href="/Resume.pdf">Resume</a></li>
     </ul>
   </nav>
   <img
