add project images

--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -61,6 +61,8 @@ import Card from "../components/Card.astro";
 • Detailed statistics about gaming habits and playtime`}
         language="Rust"
         languageColor="#dea584"
+        image="/ttt.png"
+        imagAlt="Tiny Time Tracker Web UI"
         year="2025"
         tags={["Rust", "Askama", "Tailwind", "Windows API", "SQLite"]}
       />
@@ -92,6 +94,8 @@ import Card from "../components/Card.astro";
 • Custom protocol implementations for input capture and LED synchronization
 • Enables arcade-style gaming experiences using mobile devices`}
         language="Python"
+        image="/brokenithm.png"
+        imageAlt="Brokenithm-SwiftUI bridged via USB MUX into UMIGURI"
         languageColor="#3572A5"
         year="2025"
         tags={["Python", "C#"]}
@@ -109,6 +113,8 @@ import Card from "../components/Card.astro";
 • Follows modern Java development practices and API design patterns`}
         language="Java"
         languageColor="#b07219"
+        image="/jholodex.png"
+        imageAlt="JHolodex Central Repository"
         year="2023"
         tags={["Java", "Retrofit2", "Maven Central", "REST API"]}
       />
@@ -144,6 +150,8 @@ import Card from "../components/Card.astro";
         language="Rust"
         languageColor="#dea584"
         year="2024"
+        image="/chronowatcher.png"
+        imageAlt="Crates.io FFXIV-Chronowatcher"
         tags={["Rust", "Crates.io"]}
       />
       <Card
@@ -158,6 +166,8 @@ import Card from "../components/Card.astro";
 • Content spanning from technical tutorials to industry observations
 • Project breakdowns and software development experiences`}
         language="Astro"
+        image="/blog.png"
+        imageAlt="Personal Blog Site Screenshot"
         languageColor="#ff5a03"
         year="2023"
         tags={["Astro", "MDX", "React"]}
@@ -175,6 +185,8 @@ import Card from "../components/Card.astro";
 • Streamlined workflow for building organized music libraries`}
         language="Java"
         languageColor="#b07219"
+        image="yt.png"
+        imageAlt="ytId3AutoTag Swing Metadata Editing GUI"
         year="2022"
         tags={["Java", "Swing"]}
       />
@@ -191,12 +203,14 @@ import Card from "../components/Card.astro";
 • High-quality audio streaming for Discord servers`}
         language="Java"
         languageColor="#b07219"
+        image="/lavaplayer.png"
+        imageAlt="Example usage of Discord bot. Able to search + play songs on YouTube"
         year="2022"
         tags={["Java", "JDA", "Discord Bot", "Lavaplayer", "Audio Streaming", "Async Programming"]}
       />
       <Card
         href="https://github.com/pinapelz/moekyun-me-link-shortener"
-        title="Moekyun Me Link Shortener"
+        title="Moekyun Link Shortener"
         body={`• Self-hosted URL shortening service built with Flask
 • Designed for easy deployment on serverless platforms
 • Clean, minimalist interface with intuitive controls
